--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -68,6 +68,7 @@
             android:layout_gravity="center"
             android:layout_marginStart="10dp"
             android:layout_weight="1"
+            android:id="@+id/tvLocationName"
             android:fontFamily="@font/helvetica_bold"
             android:text="Tp. Hồ Chí Minh"
             android:textColor="@color/GlacierBlueColor"
