--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -109,7 +109,7 @@
             android:layout_height="300dp"
             android:src="@drawable/bottom_design"/>
         <RelativeLayout
-            android:id="@+id/LoginregisterBtn"
+            android:id="@+id/registerBtn"
             android:layout_width="wrap_content"
             android:layout_marginTop="80dp"
             android:layout_centerHorizontal="true"
