--- a/app/src/main/res/layout/fragment_product_detail.xml
+++ b/app/src/main/res/layout/fragment_product_detail.xml
@@ -160,7 +160,22 @@
                         android:src="@drawable/filpkart"/>
 
                 </androidx.cardview.widget.CardView>
+                <androidx.cardview.widget.CardView
+                    android:layout_width="89dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginBottom="5dp"
+                    android:layout_centerHorizontal="true"
+                    app:cardCornerRadius="10dp"
+                    android:layout_height="69dp">
+                    <ImageView
+                        android:id="@+id/img3"
 
+                        android:layout_width="match_parent"
+                        android:scaleType="centerCrop"
+                        android:layout_height="match_parent"
+                        android:src="@drawable/item_img_bg"/>
+                </androidx.cardview.widget.CardView>
             </LinearLayout>
 
             <LinearLayout
