--- a/app/src/main/res/layout/layout_item_voucher.xml
+++ b/app/src/main/res/layout/layout_item_voucher.xml
@@ -1,64 +1,92 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <LinearLayout
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:orientation="horizontal"
-        tools:ignore="MissingConstraints">
-
-        <ImageView
-            android:id="@+id/imgVoucher"
-            android:layout_width="144dp"
-            android:layout_height="80dp"
-            android:layout_marginBottom="10dp"
-            app:srcCompat="@drawable/app4" />
-
+        android:layout_marginStart="5dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginBottom="1dp"
+        app:cardCornerRadius="10dp"
+        android:layout_height="wrap_content">
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="80dp"
-            android:orientation="vertical">
-
+            android:orientation="horizontal"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:id="@+id/voucherImage"
+                android:layout_width="130dp"
+                android:layout_height="130dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/item_img_bg"/>
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="35dp"
-                android:layout_marginBottom="5dp"
-                android:background="@color/White300"
-                android:orientation="horizontal">
-
+                android:orientation="vertical"
+                android:layout_height="match_parent"
+                android:padding="10dp">
                 <TextView
-                    android:id="@+id/tvGiamGia"
-                    android:layout_width="wrap_content"
-                    android:layout_height="35dp"
-                    android:text="Giảm 30%"
-                    android:textColor="@color/teal_700"
-                    android:textSize="8pt"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/tvNameVoucher"
+                    android:id="@+id/voucherName"
                     android:layout_width="match_parent"
-                    android:layout_height="35dp"
-                    android:textColor="@color/teal_700"
-                    android:textSize="8pt"
-                    android:text="Dành cho người mới"
-                    android:textStyle="bold" />
+                    android:text="Voucher Name"
+                    android:fontFamily="@font/helvetica_bold"
+                    android:textColor="#000"
+                    android:maxLines="1"
+                    android:layout_marginEnd="12dp"
+                    android:layout_weight="0.5"
+                    android:layout_height="wrap_content"
+                    android:textSize="18sp"/>
 
+                <TextView
+                    android:id="@+id/voucherDescription"
+                    android:layout_width="match_parent"
+                    android:text="Voucher Description"
+                    android:textSize="14sp"
+                    android:textColor="#A8A8A8"
+                    android:maxLines="2"
+                    android:layout_marginEnd="12dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"/>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_weight="1"
+                    android:layout_marginEnd="5dp"
+                    android:layout_marginBottom="5dp"
+                    android:layout_gravity="end|bottom"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:orientation="horizontal"
+                    android:gravity="center_vertical">
+
+                    <TextView
+                        android:id="@+id/voucherDiscount"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:text="Discount: 20%"
+                        android:layout_marginTop="5dp"
+                        android:fontFamily="@font/helvetica_bold"
+                        android:textColor="#D33A2F"
+                        android:maxLines="1"
+                        android:layout_weight="1"
+                        android:textSize="16sp"/>
+
+                    <TextView
+                        android:id="@+id/voucherMaxDiscount"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:text="Max Discount: 100.000đ"
+                        android:layout_marginTop="5dp"
+                        android:fontFamily="@font/helvetica_bold"
+                        android:textColor="#D33A2F"
+                        android:maxLines="1"
+                        android:layout_weight="1"
+                        android:textSize="16sp"
+                        android:gravity="end"/>
+
+                </LinearLayout>
             </LinearLayout>
-
-            <TextView
-                android:id="@+id/tvMoTa"
-                android:layout_width="match_parent"
-                android:layout_height="35dp"
-                android:textColor="@color/black"
-                android:textSize="8pt"
-                android:text="Áp dụng hóa đơn đầu tiên"
-                android:textStyle="normal" />
         </LinearLayout>
-
-
-    </LinearLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
+</RelativeLayout>
